fix: close license policy integration gaps